Translate to global doctor.

--- a/src/conf.properties
+++ b/src/conf.properties
@@ -1,12 +1,7 @@
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc\:mysql\://115.28.226.78\:3306/nky?characterEncoding\=UTF8&characterSetResults\=UTF8&autoReconnect\=true&zeroDateTimeBehavior\=convertToNull
-#jdbc.user=nky
-#jdbc.password=NKY_WH_123
-
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://114.55.228.245\:13306/nky?characterEncoding\=UTF8&characterSetResults\=UTF8&autoReconnect\=true&zeroDateTimeBehavior\=convertToNull
+jdbc.url=jdbc\:mysql\://121.43.123.125\:3306/nky?characterEncoding\=UTF8&characterSetResults\=UTF8&autoReconnect\=true&zeroDateTimeBehavior\=convertToNull
 jdbc.user=nky
-jdbc.password=nky_robo_123456
+jdbc.password=nky
 
 
 redis.host=localhost
